@@ -413,7 +413,9 @@ libclamav_la_SOURCES = \
 	crtmgr.c \
 	crtmgr.h \
 	asn1.c \
-	asn1.h
+	asn1.h \
+	fpu.c \
+	fpu.h
 
 libclamav_la_SOURCES += bignum.h\
 	bignum_fast.h\
